@@ -2,6 +2,7 @@ exec sql whenever sqlerror sqlprint;
 
 exec sql include sqlca;
 
+/* comment */
 exec sql define AMOUNT 4;
 
 exec sql type intarray is int[AMOUNT];
@@ -42,7 +43,7 @@ exec sql end declare section;
 	exec sql commit;
 
 	strcpy(msg, "set connection");
-	exec sql set connection main;
+	exec sql set connection to main;
 
 	strcpy(msg, "execute insert 1");
         sprintf(command, "insert into test(name, amount, letter) values ('db: mm', 1, 'f')");
@@ -69,7 +70,9 @@ exec sql end declare section;
 
 	strcpy(msg, "commit");
 	exec sql commit;
-	exec sql at pm commit;
+
+	/* Stop automatic transactioning for connection pm. */
+	exec sql at pm set autocommit to off;
 
         strcpy(msg, "select");
         exec sql select name, amount, letter into :name, :amount, :letter from test;
